# clitooltester

./: MANIFEST.in  pyproject.toml
clitooltester/: debugfs2json.py  istat2json.py  test_runner.py
clitooltester/scripts/: run.py
config/e2fsprogs/: test.sh
config/sleuthkit/: build.sh  fedora-base.Dockerfile  fedora-build.Dockerfile  test.sh
docs/: builds.md  tests.md  weaknesses.md
test_data/: ext2.debugfs  ext2.istat  ext4.debugfs  ext4.istat
tests/: debugfs2json.py  istat2json.py  test_lib.py
utils/: generate_test_data_linux.sh
