[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clitooltester"
version = "20260708"
description = "Command line tool tester (CLIToolTester)"
maintainers = [
    { name = "Joachim Metz", email = "joachim.metz@gmail.com" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML >= 3.10",
]

[project.scripts]
run = "clitooltester.scripts.run:Main"

[project.urls]
Documentation = "https://clitooltester.readthedocs.io/en/latest"
Homepage = "https://github.com/dfirlabs/clitooltester"
Repository = "https://github.com/dfirlabs/clitooltester"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"

[tool.docformatter]
black = true
non-cap = []
non-strict = true

[tool.l2tdevtools]
name = "CLIToolTester"
status = "alpha"
description = """
CLIToolTester is a framework to test command line tools. \
"""

[tool.setuptools]
package-dir = {"clitooltester" = "clitooltester"}

[tool.setuptools.package-data]
clitooltester = [
    "data/*.yaml",
]
